combate encounter  - exp, gold, and inventory rewards added    - end state is the new reward state       - separate reward state removed    - added listeners and observers for gold and xp change       - replaced level with xp on main game window       - dialogue models for gold and xp  - put both the run and fight button before entering combat inside layoutBtnOptions to display horizontally  - saving combat encounter     - added functionality  - added combatActionDialogue GoldDialogue, and ExpDialogue to saving dialogue list     - enemy serialized into JSON and ability to retrieve from JSON CharacterChoiceActivity  - made the RecyclerView list for each class name to wrap context height to display the entire list jsonAssetFileReader  - added helper methods for each encounter JSON object built in parseRandomJSONData  - Character class now serializes itself added some properly formatted comments and more detailed comments created a constructor for Enemy class that loads the serialized JSON enemy  - added ID to character set to 1, and Enemy constructor requires the ID to be passed to it as a parameter

--- a/app/src/main/res/layout/activity_character_choice.xml
+++ b/app/src/main/res/layout/activity_character_choice.xml
@@ -69,7 +69,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_character_list"
                     android:layout_width="136dp"
-                    android:layout_height="51dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.232"
@@ -83,7 +83,7 @@
                     android:id="@+id/imageView"
                     android:layout_width="163dp"
                     android:layout_height="232dp"
-                    android:layout_marginTop="64dp"
+                    android:layout_marginTop="30dp"
                     android:adjustViewBounds="false"
                     android:cropToPadding="false"
                     app:imageResource="@{characterChoiceViewModel.characterPortrait}"
@@ -97,7 +97,6 @@
                     android:layout_width="40dp"
                     android:layout_height="30dp"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="84dp"
                     android:background="@color/colorStatBackground"
                     android:fontFamily="@font/press_start_2p"
                     android:gravity="center"
@@ -105,7 +104,7 @@
                     android:textColor="#FFFFFF"
                     android:textSize="12sp"
                     app:layout_constraintStart_toEndOf="@+id/imageView"
-                    app:layout_constraintTop_toBottomOf="@+id/button"
+                    app:layout_constraintTop_toTopOf="@+id/imageView"
                     tools:text="STR" />
 
                 <TextView
@@ -215,27 +214,12 @@
                     app:layout_constraintStart_toEndOf="@+id/spd_textView"
                     app:layout_constraintTop_toTopOf="@+id/spd_textView" />
 
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="24dp"
-                    android:layout_height="20dp"
-                    app:layout_constraintStart_toEndOf="@+id/rv_character_list"
-                    app:layout_constraintTop_toTopOf="@+id/rv_character_list"
-                    app:srcCompat="@drawable/uparror" />
-
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="24dp"
-                    android:layout_height="20dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/rv_character_list"
-                    app:layout_constraintStart_toEndOf="@+id/rv_character_list"
-                    app:srcCompat="@drawable/downarror" />
 
                 <ImageView
                     android:id="@+id/imageView4"
                     android:layout_width="@dimen/mana_health_bar_width"
                     android:layout_height="@dimen/mana_health_bar_height"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="25dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView"
