--- a/app/src/main/res/layout/fragment_inventory_info.xml
+++ b/app/src/main/res/layout/fragment_inventory_info.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    tools:context=".view.inventoryinfo.InventoryInfoFragment">
     <data>
         <variable
             name="imageIconResource"
@@ -11,12 +12,9 @@
             name="name"
             type="String" />
     </data>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.inventoryinfo.InventoryInfoActivity"
-        android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <ImageView
@@ -31,11 +29,6 @@
             android:text="@{name}"
             android:textSize="@dimen/txt_size_large"/>
 
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
 
     </LinearLayout>
-
 </layout>
