--- a/app/src/main/res/layout/fragment_choice.xml
+++ b/app/src/main/res/layout/fragment_choice.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:context=".view.encounter.ChoiceFragment"
     xmlns:tools="http://schemas.android.com/tools">
-
     <data>
         <variable
-            name="benefitVM"
-            type="com.habbybolan.textadventure.viewmodel.encounters.RandomBenefitViewModel" />
-
+            name="choiceVM"
+            type="com.habbybolan.textadventure.viewmodel.encounters.ChoiceViewModel" />
     </data>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".view.encounter.RandomBenefitFragment">
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:id="@+id/trap_container"
+            android:id="@+id/choice_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -33,17 +32,8 @@
                 android:id="@+id/rv_dialogue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-
-            <FrameLayout
-                android:id="@+id/frame_inventory_snippet"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="25dp">
-            </FrameLayout>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
-
 
 </layout>
