--- a/app/src/main/res/layout/fragment_choice_benefit.xml
+++ b/app/src/main/res/layout/fragment_choice_benefit.xml
@@ -38,8 +38,9 @@
                 android:id="@+id/frame_inventory_snippet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp">
-            </FrameLayout>
+                android:layout_gravity="center"
+                android:layout_marginTop="25dp"/>
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
