--- a/app/src/main/res/layout/inventory_snippet.xml
+++ b/app/src/main/res/layout/inventory_snippet.xml
@@ -9,46 +9,37 @@
             name="inventoryName"
             type="String" />
     </data>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <LinearLayout
+        android:id="@+id/attack_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20sp"
+        android:layout_marginTop="@dimen/action_margin_top"
+        android:background="@drawable/action_back"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/img_icon_attack"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            app:imageResource="@{inventoryPic}" />
 
         <TextView
-            android:id="@+id/Title"
+            android:id="@+id/txt_name_attack"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dialogue_distance_sides"
-            android:textSize="@dimen/txt_size_large"
-            app:name="@{inventoryName}"/>
-
-        <ImageView
-            android:id="@+id/inv_picture"
-            android:layout_width="@dimen/inventory_image_size"
-            android:layout_height="@dimen/inventory_image_size"
-            android:layout_marginStart="@dimen/dialogue_distance_sides"
-            android:layout_below="@+id/Title"
-            android:imageResource="@{inventoryPic}" />
-
-        <ImageView
-            android:id="@+id/border_txt_name"
-            android:layout_width="108dp"
-            android:layout_height="@dimen/inventory_image_size"
-            android:layout_below="@+id/Title"
-            android:layout_toEndOf="@+id/inv_picture"
-            app:srcCompat="@drawable/inventory_name_border" />
-
-        <TextView
-            android:id="@+id/txt_name"
-            android:layout_width="108dp"
-            android:layout_height="@dimen/inventory_image_size"
-            android:layout_alignEnd="@+id/border_txt_name"
-            android:layout_alignBottom="@+id/border_txt_name"
-            android:gravity="center"
-            android:layout_marginStart="6dp"
-            android:textSize="@dimen/txt_size_medium"
-            android:layout_marginEnd="6dp"
-            android:layout_toEndOf="@+id/inv_picture"
+            android:layout_height="35dp"
+            android:layout_marginStart="10dp"
+            android:gravity="center_vertical"
             android:text="@{inventoryName}" />
 
-    </RelativeLayout>
+        <ImageView
+            android:id="@+id/inventory_info_attack"
+            android:layout_width="@dimen/inventory_info_icon_size"
+            android:layout_height="@dimen/inventory_info_icon_size"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/inventory_info_icon_margins"
+            android:layout_marginEnd="@dimen/inventory_info_icon_margins"
+            app:srcCompat="@drawable/inventory_info" />
+
+    </LinearLayout>
 </layout>
