--- a/app/src/main/res/layout/activity_main_game.xml
+++ b/app/src/main/res/layout/activity_main_game.xml
@@ -42,6 +42,17 @@
             app:layout_constraintBottom_toBottomOf="parent">
         </FrameLayout>
 
+        <TextView
+            android:id="@+id/txt_distance"
+            value="@{characterViewModel.distance}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/frameLayout" />
+
 
         <Button
             android:id="@+id/btn_character"
