added Combat Dungeon encounter  - Fragment and view model  - methods to start and continue the dungeon inside mainGameViewModel created a parent class EncounterModel  - holds functionality to create the dialogue section of an encounter JSONObject saving and retrieving character and enemy  - on first character save from new character, don't save all values that are set to 0 or false as default  - on retrieval of character, check if the key associated with the variable in the JSON exists  - now stores and retrieves evasion and block fields, and tempExtra fields fixed getEnemy in DatabaseAdapter not setting a weapon

--- a/app/src/main/res/layout/fragment_combat.xml
+++ b/app/src/main/res/layout/fragment_combat.xml
@@ -38,6 +38,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:layoutAnimation="@anim/layout_animation"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -45,6 +46,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:layoutAnimation="@anim/layout_animation"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -52,6 +54,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
+                        android:layoutAnimation="@anim/layout_animation"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
                 </LinearLayout>
 
