combat encounter  - added an animation to combat order list added info text to InventoryInfoFragment  - viewModel to share between InventoryInfoActivity and InventoryInfoFragment  - Model to deal with logic of how to lay out String of info for inventory  - updates buyInformationActivity and SellInformationActivity to work with new InventoryInfoFragment and its viewModel added break encounter that is sometimes called between outdoor encounters  - created a check in MainGameModel to deal with chance to enter the encounter  - added JSON file in assets break_encounters to store encounters      - added method in JSONAssetFileReader to read and parse the new break_encounters file  - encounter currently unstable added InfoPopupWindow class to deal with popups  - added method to add popup for dungeon information with animations  - converted toast messages to the temporary popupWindow  - added onClick to CharacterListClickListener to pass message to fragment from adapter to display with popup

--- a/app/src/main/res/layout/activity_inventory_info.xml
+++ b/app/src/main/res/layout/activity_inventory_info.xml
@@ -4,12 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <variable
-            name="imageIconResource"
-            type="Integer" />
-        <variable
-            name="name"
-            type="String" />
+
     </data>
 
     <LinearLayout
@@ -17,23 +12,12 @@
         android:layout_height="match_parent"
         tools:context=".view.inventoryinfo.InventoryInfoActivity"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/img_icon"
-            android:layout_width="@dimen/icon_info_size"
-            android:layout_height="@dimen/icon_info_size"
-            app:imageResource="@{imageIconResource}"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{name}"
-            android:textSize="@dimen/txt_size_large"/>
+        android:orientation="vertical"
+        android:background="@color/behind_scroll">
 
         <FrameLayout
             android:id="@+id/fragment_container"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
