--- a/app/src/main/res/layout/fragment_trap.xml
+++ b/app/src/main/res/layout/fragment_trap.xml
@@ -8,8 +8,9 @@
     </data>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         tools:context=".view.encounter.TrapFragment">
+
         <LinearLayout
             android:id="@+id/trap_container"
             android:layout_width="match_parent"
