--- a/app/src/main/res/layout/activity_main_game.xml
+++ b/app/src/main/res/layout/activity_main_game.xml
@@ -91,33 +91,33 @@
 
         <TextView
             android:id="@+id/txt_health_value"
-            android:layout_width="wrap_content"
+            android:layout_width="35dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@{characterViewModel.health}"
             android:textColor="#000000"
-            android:textSize="12sp"
+            android:textSize="@dimen/txt_size_medium"
             app:layout_constraintBottom_toBottomOf="@+id/health_mana_image"
             app:layout_constraintEnd_toEndOf="@+id/health_mana_image"
-            app:layout_constraintHorizontal_bias="0.277"
+            app:layout_constraintHorizontal_bias="0.16"
             app:layout_constraintStart_toStartOf="@+id/health_mana_image"
             app:layout_constraintTop_toTopOf="@+id/health_mana_image"
-            app:layout_constraintVertical_bias="0.523" />
+            app:layout_constraintVertical_bias="0.65999997" />
 
         <TextView
             android:id="@+id/txt_mana_value"
-            android:layout_width="wrap_content"
+            android:layout_width="35dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@{characterViewModel.mana}"
             android:textColor="#000000"
-            android:textSize="12sp"
+            android:textSize="@dimen/txt_size_medium"
             app:layout_constraintBottom_toBottomOf="@+id/health_mana_image"
             app:layout_constraintEnd_toEndOf="@+id/health_mana_image"
-            app:layout_constraintHorizontal_bias="0.712"
+            app:layout_constraintHorizontal_bias="0.85"
             app:layout_constraintStart_toStartOf="@+id/health_mana_image"
             app:layout_constraintTop_toTopOf="@+id/health_mana_image"
-            app:layout_constraintVertical_bias="0.523" />
+            app:layout_constraintVertical_bias="0.65999997" />
 
         <TextView
             android:id="@+id/txt_turn"
