--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -14,6 +14,7 @@
         tools:context=".view.characterfragment.CharacterFragment">
 
         <LinearLayout
+            android:id="@+id/character_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
