--- a/app/src/main/res/layout/fragment_combat.xml
+++ b/app/src/main/res/layout/fragment_combat.xml
@@ -11,7 +11,7 @@
 
     <androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/container"
@@ -55,11 +55,14 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layoutAnimation="@anim/layout_animation"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
+
+                    </androidx.recyclerview.widget.RecyclerView>
                 </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/enemy_action_icons"
+                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -76,6 +79,7 @@
 
                 <LinearLayout
                     android:id="@+id/rv_category_options"
+                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
