--- a/app/src/main/res/layout/fragment_inventory_info.xml
+++ b/app/src/main/res/layout/fragment_inventory_info.xml
@@ -11,24 +11,41 @@
         <variable
             name="name"
             type="String" />
+        <variable
+            name="info"
+            type="String" />
     </data>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/img_icon"
             android:layout_width="@dimen/icon_info_size"
             android:layout_height="@dimen/icon_info_size"
+            android:layout_gravity="center"
             app:imageResource="@{imageIconResource}"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{name}"
+            android:layout_gravity="center"
             android:textSize="@dimen/txt_size_large"/>
 
+        <FrameLayout
+            android:id="@+id/inventory_snippet"
+            android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@{info}"/>
 
     </LinearLayout>
+
 </layout>
