--- a/app/src/main/res/layout/inventory_snippet.xml
+++ b/app/src/main/res/layout/inventory_snippet.xml
@@ -19,13 +19,13 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/img_icon_attack"
+            android:id="@+id/img_icon"
             android:layout_width="35dp"
             android:layout_height="35dp"
             app:imageResource="@{inventoryPic}" />
 
         <TextView
-            android:id="@+id/txt_name_attack"
+            android:id="@+id/txt_name"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_marginStart="10dp"
@@ -33,13 +33,14 @@
             android:text="@{inventoryName}" />
 
         <ImageView
-            android:id="@+id/inventory_info_attack"
+            android:id="@+id/inventory_info"
             android:layout_width="@dimen/inventory_info_icon_size"
             android:layout_height="@dimen/inventory_info_icon_size"
             android:layout_gravity="center"
             android:layout_marginStart="@dimen/inventory_info_icon_margins"
             android:layout_marginEnd="@dimen/inventory_info_icon_margins"
-            app:srcCompat="@drawable/inventory_info" />
+            app:srcCompat="@drawable/inventory_info"/>
 
     </LinearLayout>
+
 </layout>
