Created Encounter object to hold the encounter JSONObject and its type fixed InventoryInfoActivity and InventoryInfoFragment for displaying the snippets inside the information screen  - fragment uses bundles to deal with configuration changes  - fragment stores the inventory JSON String of the inventory object for easier retrieval and storage in bundle  - InventoryInfoFragment takes inventory string through its newInstance method     - fixed (buy)SellInformationActivity to pass String to fragment  - created InventoryInfoDisplay that deals with the functionality of adding the new fragments, setting listener, and back button functionality.     - parent class of any activity that is displaying Inventory information added a default weapon object, as well as default attack and special attack to accompany it  - removing all weapons now adds a default weapon instead of having 0 weapons  - adding a weapon with only a default weapon removes the default weapon added method in Outdoor model to get random outdoor encounter with specific weighting

--- a/app/src/main/res/layout/activity_buy_information.xml
+++ b/app/src/main/res/layout/activity_buy_information.xml
@@ -14,24 +14,26 @@
             android:id="@+id/btn_confirm"
             android:layout_width="@dimen/default_btn_width"
             android:layout_height="@dimen/default_btn_height"
-            android:layout_marginStart="24dp"
+            android:layout_marginEnd="@dimen/inventory_info_button_side_margin"
+            android:layout_marginTop="@dimen/inventory_info_button_top_margin"
             android:onClick="confirmBuy"
             android:text="@string/buy"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_buy_info" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <FrameLayout
             android:id="@+id/fragment_buy_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/button2" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_back" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btn_back"
             android:layout_width="@dimen/default_btn_width"
             android:layout_height="@dimen/default_btn_height"
-            android:layout_marginStart="24dp"
-            android:onClick="goBack"
+            android:layout_marginStart="@dimen/inventory_info_button_side_margin"
+            android:layout_marginTop="@dimen/inventory_info_button_top_margin"
+            android:onClick="backButton"
             android:text="Back"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
