--- a/app/src/main/res/layout/activity_sell_information.xml
+++ b/app/src/main/res/layout/activity_sell_information.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
 
@@ -12,24 +13,26 @@
             android:id="@+id/btn_confirm"
             android:layout_width="@dimen/default_btn_width"
             android:layout_height="@dimen/default_btn_height"
-            android:layout_marginStart="24dp"
+            android:layout_marginEnd="@dimen/inventory_info_button_side_margin"
+            android:layout_marginTop="@dimen/inventory_info_button_top_margin"
             android:onClick="confirmSell"
             android:text="@string/sell"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_sell_info" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <FrameLayout
             android:id="@+id/fragment_sell_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/button2" />
+            app:layout_constraintTop_toBottomOf="@+id/back_button" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/back_button"
             android:layout_width="@dimen/default_btn_width"
             android:layout_height="@dimen/default_btn_height"
-            android:layout_marginStart="24dp"
-            android:onClick="goBack"
+            android:layout_marginStart="@dimen/inventory_info_button_side_margin"
+            android:layout_marginTop="@dimen/inventory_info_button_top_margin"
+            android:onClick="backButton"
             android:text="Back"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
