--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -35,6 +35,8 @@
     <dimen name="default_btn_width">100dp</dimen>
 
     <dimen name="character_frag_title">20dp</dimen>
-
     <dimen name="inventory_image_size">50dp</dimen>
+
+    <dimen name="inventory_info_button_side_margin">24dp</dimen>
+    <dimen name="inventory_info_button_top_margin">6dp</dimen>
 </resources>
