--- a/app/src/main/res/layout/activity_sell_information.xml
+++ b/app/src/main/res/layout/activity_sell_information.xml
@@ -7,7 +7,8 @@
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/behind_scroll">
 
         <Button
             android:id="@+id/btn_confirm"
