--- a/app/src/main/res/layout/inventory_snippet.xml
+++ b/app/src/main/res/layout/inventory_snippet.xml
@@ -9,13 +9,12 @@
             name="inventoryName"
             type="String" />
     </data>
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/attack_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20sp"
-        android:layout_marginTop="@dimen/action_margin_top"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@drawable/action_back"
+        android:padding="3dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -26,21 +25,23 @@
 
         <TextView
             android:id="@+id/txt_name"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="35dp"
             android:layout_marginStart="10dp"
-            android:gravity="center_vertical"
+            android:layout_toEndOf="@+id/img_icon"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:text="@{inventoryName}" />
 
         <ImageView
             android:id="@+id/inventory_info"
             android:layout_width="@dimen/inventory_info_icon_size"
             android:layout_height="@dimen/inventory_info_icon_size"
-            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/inventory_info_icon_margins"
             android:layout_marginStart="@dimen/inventory_info_icon_margins"
-            android:layout_marginEnd="@dimen/inventory_info_icon_margins"
-            app:srcCompat="@drawable/inventory_info"/>
+            android:layout_toEndOf="@+id/txt_name"
+            app:srcCompat="@drawable/inventory_info" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </layout>
