--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,5 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme"
         parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -8,6 +7,9 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#000000</item>
         <item name="buttonStyle">@style/DefaultButton</item>
+
+        <item name="android:windowContentTransitions">true</item>
+
     </style>
 
     <style name="DefaultButton" parent="android:style/Widget.Button">
