Changed all encounter viewModels to extends AndroidViewModel  - cleaned up some copy code and moved to the encounter parent class.  - uses Application instead of Context updated animation to and from InventoryInfoActivity and BuyInformationActivity  - fixed default weapon from showing up in sell list  - allow buying recently sold item for higher price

--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -23,8 +23,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/items_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/inventory"
@@ -53,8 +52,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/weapons_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/weapons"
@@ -84,8 +82,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/abilities_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/abilities"
