--- a/app/src/main/res/layout/fragment_trap.xml
+++ b/app/src/main/res/layout/fragment_trap.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="trapVM"
-            type="com.habbybolan.textadventure.viewmodel.encounters.TrapEncounterViewModel"/>
+            type="com.habbybolan.textadventure.viewmodel.encounters.TrapViewModel"/>
     </data>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
